--- a/app/index.html
+++ b/app/index.html
@@ -42,6 +42,7 @@
 	<!-- <script>loadCSS( "css/header.css?ver=1.0.0", false, "all" );</script> -->
 	<script>loadCSS( "css/main.css?ver=1.0.0", false, "all" );</script>
 	<script>loadCSS( "libs/fancyBox/jquery.fancybox.css?ver=1.0.0", false, "all" );</script>
+	<script>loadCSS( "libs/flickity/flickity.css?ver=1.0.0", false, "all" );</script>
 	<!-- Load CSS End -->
 
 	<!-- Load CSS Compiled without JS -->
