--- a/app/index.html
+++ b/app/index.html
@@ -66,8 +66,12 @@
 
 	<div class="hidden">
 		<div id="modal_callback_ok">
-			<h3>Спасибо!</h3>
-			<h3>Ваше сообщение успешно отправлено.</h3>
+			<div class="top">
+				<h3>Спасибо!</h3>
+			</div>
+			<div class="bottom">
+				<h3>Ваше сообщение успешно отправлено.</h3>
+			</div>
 		</div>
 		<a id="call_ok" class="modal" href="#modal_callback_ok"></a>
 	</div>
