--- a/app/index.html
+++ b/app/index.html
@@ -67,9 +67,10 @@
 	<div class="hidden">
 		<div id="modal_callback_ok">
 			<div class="top">
-				<h3>Спасибо!</h3>
+				<i class="fa fa-check" aria-hidden="true"></i>
 			</div>
 			<div class="bottom">
+				<h3>Спасибо!</h3>
 				<h3>Ваше сообщение успешно отправлено.</h3>
 			</div>
 		</div>
