--- a/app/index.html
+++ b/app/index.html
@@ -74,7 +74,7 @@
 				<h3>Ваше сообщение успешно отправлено.</h3>
 			</div>
 		</div>
-		<a id="call_ok" class="modal" href="#modal_callback_ok"></a>
+		<a id="call_ok" class="modall_pad" href="#modal_callback_ok"></a>
 	</div>
 
 	<!--[if lt IE 9]>
